; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_main.c_sqlite3_uri_int64.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_main.c_sqlite3_uri_int64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3_uri_int64(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i8* @sqlite3_uri_parameter(i8* %9, i8* %10)
  store i8* %11, i8** %7, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load i8*, i8** %7, align 8
  %16 = call i64 @sqlite3DecOrHexToI64(i8* %15, i32* %8)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* %8, align 4
  store i32 %19, i32* %6, align 4
  br label %20

20:                                               ; preds = %18, %14, %3
  %21 = load i32, i32* %6, align 4
  ret i32 %21
}

declare dso_local i8* @sqlite3_uri_parameter(i8*, i8*) #1

declare dso_local i64 @sqlite3DecOrHexToI64(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
